--- a/Banco - FrontEnd/consulta_clientes.html
+++ b/Banco - FrontEnd/consulta_clientes.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Su banco</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link href="estilos.css" rel="stylesheet">
+    <link href="css/estilos.css" rel="stylesheet">
 </head>
 
 <body>
 
-    <div class="header">
+    <header>
         <h1>Banco UN</h1>
         <nav>
             <button>Iniciar Sesión</button>
             <a href="registro.html"><button>Registrarse</button></a>
         </nav>
-    </div>        
+    </header>
 
     <div class="main-component">
         <h2>Listado de clientes</h2>
@@ -29,6 +29,6 @@
         <h2>Misión TIC 2022</h2>
     </footer>
 
-    <script src="consulta_clientes.js"></script>
+    <script src="js/consulta_clientes.js"></script>
 
 </body>
