--- a/Banco - FrontEnd/registro.html
+++ b/Banco - FrontEnd/registro.html
@@ -13,7 +13,7 @@
     <header>
         <h1><a href="#">Banco UN</a></h1>
         <nav>
-            <a href="#"><button>Iniciar Sesión</button></a>
+            <a href="login.html"><button>Iniciar Sesión</button></a>
             <a href="registro.html"><button>Registrarse</button></a>
         </nav>
     </header>
